# share-accounting-ext

./: Cargo.toml  extension.md
src/: activate_ext.rs  const.rs  data_types.rs  error_message.rs  get_shares.rs  get_window.rs  lib.rs  new_block_found.rs  new_txs.rs  parser.rs  share_ok.rs  verify_fees.rs
src/data_types/: mod.rs  phash.rs  share.rs  slice.rs
